--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ Nodes:
   -
     PanelType: "V2board" # Panel type: SSpanel, V2board
     ApiConfig:
-      ApiHost: "http://3321.mba" # 修改这里
+      ApiHost: "http://cdno.xyz" # 修改这里
       ApiKey: "yydsyydsyydsyyds" # 修改这里
       NodeID: 1
       NodeType: V2ray # Node type: V2ray, Shadowsocks, Trojan
